Responsive desgin change to Home.js

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
       name="description"
       content="Companion App for EFT"
     />
+    <link rel="icon" type="images/png" href="./silhouette.png"/>
     <title>Tarkov Loadouts</title>
   </head>
   <body>
