--- a/public/index.html
+++ b/public/index.html
@@ -4,46 +4,52 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <!-- HTML meta-->
     <meta
       name="description"
-      content="Companion App for EFT"
+      content="Tarkov Loadouts is a companion App for Battle State Game's Escape from Tarkov.  Randomize your loadout and jump into your next raid!"
     />
-    <link rel="icon" type="images/png" href="./silhouette.png"/>
+    <link rel="icon" type="images/png" href="./silhouette.png" />
     <title>Tarkov Loadouts</title>
+    <!-- For Google -->
+    <meta
+      name="keywords"
+      content="Escape from Tarkov, EFT, Tarkov, Tarkov-Loadouts"
+    />
+    <meta name="application-name" content="Tarkov Loadouts" />
+
+    <!-- For Facebook -->
+    <meta property="og:title" content="Tarkov Loadouts" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="./silhouette.png" />
+    <meta
+      property="og:url"
+      content="https://applefrittr.github.io/tarkov-loadouts/"
+    />
+    <meta
+      property="og:description"
+      content="Tarkov Loadouts is a companion App for Battle State Game's Escape from Tarkov.  Randomize your loadout and jump into your next raid!"
+    />
   </head>
   <body>
     <script type="text/javascript">
-      // Single Page Apps for GitHub Pages
-      // MIT License
-      // https://github.com/rafgraph/spa-github-pages
-      // This script checks to see if a redirect is present in the query string,
-      // converts it back into the correct url and adds it to the
-      // browser's history using window.history.replaceState(...),
-      // which won't cause the browser to attempt to load the new url.
-      // When the single page app is loaded further down in this file,
-      // the correct url will be waiting in the browser's history for
-      // the single page app to route accordingly.
-      (function(l) {
-        if (l.search[1] === '/' ) {
-          var decoded = l.search.slice(1).split('&').map(function(s) { 
-            return s.replace(/~and~/g, '&')
-          }).join('?');
-          window.history.replaceState(null, null,
-              l.pathname.slice(0, -1) + decoded + l.hash
+      (function (l) {
+        if (l.search[1] === "/") {
+          var decoded = l.search
+            .slice(1)
+            .split("&")
+            .map(function (s) {
+              return s.replace(/~and~/g, "&");
+            })
+            .join("?");
+          window.history.replaceState(
+            null,
+            null,
+            l.pathname.slice(0, -1) + decoded + l.hash
           );
         }
-      }(window.location))
+      })(window.location);
     </script>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
