silhouette.png touch up, added to meta img tag in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     <!-- For Facebook -->
     <meta property="og:title" content="Tarkov Loadouts" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="./silhouette.png" />
+    <meta property="og:image" content="./tarkov-loadouts/silhouette.png" />
     <meta
       property="og:url"
       content="https://applefrittr.github.io/tarkov-loadouts/"
